Finalizando o trabalho com implementação do Circuit Breaker

--- a/microservices/greeting-service/src/main/resources/application.properties
+++ b/microservices/greeting-service/src/main/resources/application.properties
@@ -13,3 +13,6 @@ management.endpoint.env.show-values=always
 
 #Config Client
 spring.config.import=optional:configserver:http://localhost:8888
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
+eureka.client.healthcheck.enabled=true
