--- a/microservices/product-service/src/main/resources/application.properties
+++ b/microservices/product-service/src/main/resources/application.properties
@@ -16,3 +16,29 @@ eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
 
 eureka.client.healthcheck.enabled=true
+
+
+#Configs Circuit Breaker
+spring.cloud.openfeign.circuitbreaker.enabled=true
+
+resilience4j.circuitbreaker.instances.CurrencyClientgetCurrencydoubleStringString.register-health-indicator=true
+
+resilience4j.circuitbreaker.instances.CurrencyClientgetCurrencydoubleStringString.sliding-window-size=10
+
+resilience4j.circuitbreaker.instances.CurrencyClientgetCurrencydoubleStringString.minimum-number-of-calls=5
+
+resilience4j.circuitbreaker.instances.CurrencyClientgetCurrencydoubleStringString.failure-rate-threshold=50
+
+resilience4j.circuitbreaker.instances.CurrencyClientgetCurrencydoubleStringString.wait-duration-in-open-state=10s
+
+resilience4j.circuitbreaker.instances.CurrencyClientgetCurrencydoubleStringString.permitted-number-of-calls-in-half-open-state=3
+
+resilience4j.circuitbreaker.instances.CurrencyClientgetCurrencydoubleStringString.automatic-transition-from-open-to-half-open-enabled=true
+
+management.endpoint.health.show-components=always
+
+management.health.circuitbreakers.enabled=true
+
+#Caffeine
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
